fixed footer on mobile screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,9 +77,9 @@ body {
 
 .background-pics{
   background-color: #370624;
- height: 80vh;
+height: 80vh;
  width: 100vw;
- border: 3px solid black;
+ /* border: 3px solid black; */
  /* display: flex;
  align-items: center;
  justify-content: center; */
@@ -263,6 +263,9 @@ body {
   background-color: #370624;
   border: 4px solid black;
   z-index: 1;
+  height: 20vh;
+
+  
 }
 
 .footer-grid {
@@ -299,6 +302,11 @@ ul li {
 }
 
 /* Menu Styling */
+
+.main-section{
+  flex-grow: 1;
+  background-color: #370624;
+}
 
 .bgm-img-menu {
   background-image: linear-gradient(rgba(37, 15, 15, 0.4), rgba(0, 0, 0, 0.4)),
